modified the installed packages

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
 numpy
 scikit-image
 opencv-python  
+dash                      
+dash-bootstrap-components 
+dash-core-components     
+dash-html-components      
+dash-player               
+dash-table                
+dash-uploader             
+Flask                     
+Flask-SocketIO            
+matplotlib  
+pandas                   
+Pillow                
+plotly                   
+scikit-image              
+scipy                   
